# athena-green

./: README.md
oslib/base_drivers/base_ble/: base_ble.c  base_ble.h
oslib/node_drivers/node_ble/: node_ble.c  node_ble.h
oslib/node_drivers/node_sensors/: node_sensors.c  node_sensors.h
project/base/: .gitignore  CMakeLists.txt  bt.conf  data.7z  dtc_shell.overlay  make_flash.sh  mqtt_receiver.py  mqtt_send.sh  mqtt_sender.py  mqtt_test_sender.py  prj.conf  screen.sh  shell.conf  usb.conf
project/base/data/: knn_zones.ipynb  model_knn.pickle  parse.py  z1.json  z2.json  z3.json  z3json  z4.json  z5.json  z6.json  z7.json  z8.json
project/base/data/old/: 1to8.json  8to1.json  z1.json  z2.json  z3.json  z4.json  z5.json  z6.json  z7.json  z8.json
project/base/src/: main.c
project/node/: CMakeLists.txt  bt.conf  logger.sh  mobile_make_flash.sh  mobile_overlay.overlay  nc.sh  prj_mobile.conf  prj_static.conf  recvtimer.py  requirements.txt  static_make_flash.sh  thingy_static_make_flash.sh  xenon_static_make_flash.sh
project/node/src/: main.c
project/pc/: knntracking.py  tracking.py
