# SPDX-License-Identifier: Apache-2.0
#set (BOARD thingy52_nrf52832)
#set (BOARD_FLASH RUNNER jlink)

cmake_minimum_required(VERSION 3.20.0)
# 0 or 1
option(MOBILE_NODE "is a mobile node (otherwise static node)" OFF)
if (MOBILE_NODE)
	set(DTC_OVERLAY_FILE mobile_overlay.overlay)
	set(CONF_FILE prj_mobile.conf segger_rtt_console.conf bt.conf)
	add_definitions(-DMOBILE_NODE=1)
	add_definitions(-DM_ID=1)
else()
	set(CONF_FILE prj_static.conf segger_rtt_console.conf bt.conf)
	add_definitions(-DM_ID=5)
endif()

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(athena_green)	

# Add include directories
include_directories(
			../../oslib/node_drivers/node_sensors/
			../../oslib/node_drivers/node_ble/
			)
# Add source
target_sources(app PRIVATE
			src/main.c
			../../oslib/node_drivers/node_sensors/node_sensors.c
			../../oslib/node_drivers/node_ble/node_ble.c
			)

